2002-03-03  Andras Varga

	* filemgrs.cc: increased precision of numbers in output vector files
	("%g" fprintf formats changed to "%.9g"). [suggested by George Young]

2002-03-03  Andras Varga

	* Various changes: management of output vectors, output scalars and
	snapshots were moved into to the user interface library. See following
	entries and include/ChangeLog.

	* cenvir.cc: implementation of new cEnvir methods (just forward calls
	to TOmnetApp.)

	* omnetapp.h/cc: new methods; plugin mechanism: cOutputVectorManager,
	cOutputScalarManager, cSnapshotManager. (see new file include/envirext.h)

	* ini file entries no longer supported: [General]/log-parchanges,
	[General]/parchange-file. (Parameter change logging no longer
	supported, see include/ChangeLog).

	* new ini file entries: [General]/outputvectormanager-class,
        outputscalarmanager-class, snapshotmanager-class. They specify the name
        of the output vector manager, etc class to be plugged into Envir.
        The classes must have been registered with Register_Class().
        The default values are cFileOutputVectorManager, cFileOutputScalarManager,
        cFileSnapshotManager.

	* filemgrs.h/cc: new files: implementation if plugin classes:
	cFileOutputVectorManager, cFileOutputScalarManager, cFileSnapshotManager

        * cenvir.cc: bugfix: TOmnetApp::shutdown() was never called from cEnvir.

2002-02-24  Andras Varga

	* exit with status 0 if simulation terminated normally (as determined
        by simulation.normalTermination), otherwise with status 1.

2002-02-14  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>

	* omnetapp.cc (putmsg): Bugfix: if OMNeT++ dies shortly after a
	call to putmsg (e.g. SIGSEGV), the output might not be written
	(especially when redirecting to a file). A call to ::fflush()
	ensures that the stdout buffer is emptied.

2001-10-04 Andras Varga

	* cinifile.h, cinifile.cc: no more upper limit on size of ini file
        (tables are dynamically reallocated if needed)
