@@ -1,3 +1,9 @@
+2002-03-11  Uli Kaage  <kaage@int.uni-karlsruhe.de>
+
+	* filemgrs.cc (initVector): make sure that vp->name is not
+	NULL. This would cause a crash on SUN Solaris
+	(recordScalar): make sure name is not null
+
 2002-03-03  Andras Varga
 
 	* filemgrs.cc: increased precision of numbers in output vector files
